[gd_scene load_steps=18 format=4 uid="uid://crbsq8y5lhhtm"]

[ext_resource type="Script" path="res://scenes/levels/default_level.gd" id="1_aso1f"]
[ext_resource type="PackedScene" uid="uid://dcoxv5ltdb6jd" path="res://scenes/player/player.tscn" id="1_r14bm"]
[ext_resource type="Texture2D" uid="uid://ff8fruh0suws" path="res://art/walls.png" id="2_1ko61"]
[ext_resource type="Texture2D" uid="uid://dhxatt2oyg7gv" path="res://art/shop-v1.png" id="6_0m5hj"]
[ext_resource type="PackedScene" uid="uid://bf0acm8d0oyfo" path="res://scenes/security/camera_2.tscn" id="6_e0757"]
[ext_resource type="PackedScene" uid="uid://xl6v1i7f7mqa" path="res://scenes/security/guard.tscn" id="6_my56m"]
[ext_resource type="PackedScene" uid="uid://cyny6w3bprg68" path="res://scenes/security/camera_1.tscn" id="7_lipyv"]
[ext_resource type="PackedScene" uid="uid://c2eluf5f0tti3" path="res://scenes/security/shopkeeper.tscn" id="7_mng4l"]
[ext_resource type="AudioStream" uid="uid://c75v34deh64ih" path="res://sounds/mgj48.wav" id="9_4r2yo"]
[ext_resource type="Texture2D" uid="uid://bnfm3kooagkci" path="res://art/hats-v1.png" id="10_nc52c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uee12"]
texture = ExtResource("2_1ko61")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5wg0b"]
texture = ExtResource("6_0m5hj")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.5, -16, 10.5, -11, 16, -3, 16, 2, 10.5, 10.5, 0.5, 16, -11.5, 10.5, -16, 2.5, -16, -1.5, -10.5, -11)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 11.5, -16, 12)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 9.5, -16, 9.5)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 9.5, -16, 9.5)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_o4j85"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
sources/1 = SubResource("TileSetAtlasSource_5wg0b")
sources/0 = SubResource("TileSetAtlasSource_uee12")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bahb7"]
texture = ExtResource("6_0m5hj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_w03w6"]
sources/0 = SubResource("TileSetAtlasSource_bahb7")

[sub_resource type="LabelSettings" id="LabelSettings_oxe2j"]
font_size = 32

[sub_resource type="AtlasTexture" id="AtlasTexture_7o8t1"]
atlas = ExtResource("10_nc52c")
region = Rect2(-0.182297, -0.150866, 16.5037, 16.9198)

[node name="DefaultLevel" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_aso1f")
number_of_hats_to_be_steal = 15

[node name="TileMap" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource("TileSet_o4j85")
rendering_quadrant_size = 32
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAADAAMAAQABAAEAAAADAAQAAQABAAIAAAADAAUAAQABAAMAAAAEAAMAAQABAAEAAAAEAAQAAQABAAIAAAAEAAUAAQABAAMAAAAFAAMAAQABAAEAAAAFAAQAAQABAAIAAAAFAAUAAQABAAMAAAAGAAMAAQABAAEAAAAGAAQAAQABAAIAAAAGAAUAAQABAAMAAAAHAAMAAQABAAEAAAAHAAQAAQABAAIAAAAHAAUAAQABAAMAAAAIAAMAAQABAAEAAAAIAAQAAQABAAIAAAAIAAUAAQABAAMAAAAJAAMAAQABAAEAAAAJAAQAAQABAAIAAAAJAAUAAQABAAMAAAAKAAMAAQABAAEAAAAKAAQAAQABAAIAAAAKAAUAAQABAAMAAAALAAMAAQACAAEAAAALAAQAAQACAAIAAAALAAUAAQABAAMAAAAMAAMAAQACAAEAAAAMAAQAAQACAAIAAAAMAAUAAQABAAMAAAANAAMAAQACAAEAAAANAAQAAQACAAIAAAANAAUAAQABAAMAAAAOAAMAAQACAAEAAAAOAAQAAQACAAIAAAAOAAUAAQABAAMAAAAPAAMAAQACAAEAAAAPAAQAAQACAAIAAAAPAAUAAQABAAMAAAAQAAMAAQACAAEAAAAQAAQAAQACAAIAAAAQAAUAAQABAAMAAAARAAMAAQACAAEAAAARAAQAAQACAAIAAAARAAUAAQABAAMAAAASAAMAAQACAAEAAAASAAQAAQACAAIAAAASAAUAAQABAAMAAAATAAMAAQACAAEAAAATAAQAAQACAAIAAAATAAUAAQABAAMAAAAUAAMAAQACAAEAAAAUAAQAAQACAAIAAAAUAAUAAQABAAMAAAAVAAMAAQACAAEAAAAVAAQAAQACAAIAAAAVAAUAAQABAAMAAAAWAAMAAQABAAEAAAAWAAQAAQABAAIAAAAWAAUAAQABAAMAAAAXAAMAAQABAAEAAAAXAAQAAQABAAIAAAAXAAUAAQABAAMAAAAYAAMAAQABAAEAAAAYAAQAAQABAAIAAAAYAAUAAQABAAMAAAAZAAMAAQABAAEAAAAZAAQAAQABAAIAAAAZAAUAAQABAAMAAAAaAAMAAQABAAEAAAAaAAQAAQABAAIAAAAaAAUAAQABAAMAAAAbAAMAAQABAAEAAAAbAAQAAQABAAIAAAAbAAUAAQABAAMAAAAcAAMAAQABAAEAAAAcAAQAAQABAAIAAAAcAAUAAQABAAMAAAAdAAMAAQABAAEAAAAdAAQAAQABAAIAAAAdAAUAAQABAAMAAAAdAAYAAQABAAEAAAAdAAcAAQABAAIAAAAdAAgAAQABAAMAAAAdAAkAAQABAAEAAAAdAAoAAQABAAIAAAAdAAsAAQABAAMAAAAdAAwAAQABAAEAAAAdAA0AAQABAAIAAAAdAA4AAQABAAMAAAAdAA8AAQABAAEAAAAdABAAAQABAAIAAAAdABEAAQABAAMAAAAcAA8AAQABAAEAAAAcABAAAQABAAIAAAAcABEAAQABAAMAAAAbAA8AAQABAAEAAAAbABAAAQABAAIAAAAbABEAAQABAAMAAAAaAA8AAQABAAEAAAAaABAAAQABAAIAAAAaABEAAQABAAMAAAAZAA8AAQABAAEAAAAZABAAAQABAAIAAAAZABEAAQABAAMAAAAYAA8AAQABAAEAAAAYABAAAQABAAIAAAAYABEAAQABAAMAAAAXAA8AAQABAAEAAAAXABAAAQABAAIAAAAXABEAAQABAAMAAAAWAA8AAQABAAEAAAAWABAAAQABAAIAAAAWABEAAQABAAMAAAAVAA8AAQABAAEAAAAVABAAAQABAAIAAAAVABEAAQABAAMAAAAUAA8AAQABAAEAAAAUABAAAQABAAIAAAAUABEAAQABAAMAAAATAA8AAQABAAEAAAATABAAAQABAAIAAAATABEAAQABAAMAAAASAA8AAQABAAEAAAASABAAAQABAAIAAAASABEAAQABAAMAAAARAA8AAQABAAEAAAARABAAAQABAAIAAAARABEAAQABAAMAAAAQAA8AAQABAAEAAAAQABAAAQABAAIAAAAQABEAAQABAAMAAAAPAA8AAQABAAEAAAAPABAAAQABAAIAAAAPABEAAQABAAMAAAAOAA8AAQABAAEAAAAOABAAAQABAAIAAAAOABEAAQABAAMAAAANAA8AAQABAAEAAAANABAAAQABAAIAAAANABEAAQABAAMAAAAMAA8AAQABAAEAAAAMABAAAQABAAIAAAAMABEAAQABAAMAAAALAA8AAQABAAEAAAALABAAAQABAAIAAAALABEAAQABAAMAAAAKAA8AAQABAAEAAAAKABAAAQABAAIAAAAKABEAAQABAAMAAAAJAA8AAQABAAEAAAAJABAAAQABAAIAAAAJABEAAQABAAMAAAAIAA8AAQABAAEAAAAIABAAAQABAAIAAAAIABEAAQABAAMAAAAHAA8AAQABAAEAAAAHABAAAQABAAIAAAAHABEAAQABAAMAAAAGAA8AAQABAAEAAAAGABAAAQABAAIAAAAGABEAAQABAAMAAAAFAA8AAQABAAEAAAAFABAAAQABAAIAAAAFABEAAQABAAMAAAAEAA8AAQABAAEAAAAEABAAAQABAAIAAAAEABEAAQABAAMAAAADAA8AAQABAAEAAAADABAAAQABAAIAAAADABEAAQABAAMAAAADAAwAAQABAAEAAAADAA0AAQABAAIAAAADAA4AAQABAAMAAAADAAkAAQABAAEAAAADAAoAAQABAAIAAAADAAsAAQABAAMAAAADAAYAAQABAAEAAAADAAcAAQABAAIAAAADAAgAAQABAAMAAAAEAAYAAQABAAEAAAAEAAcAAQABAAIAAAAEAAgAAQABAAMAAAAFAAYAAQABAAEAAAAFAAcAAQABAAIAAAAFAAgAAQABAAMAAAAHAAYAAQABAAEAAAAHAAcAAQABAAIAAAAHAAgAAQABAAMAAAAIAAYAAQABAAEAAAAIAAcAAQABAAIAAAAIAAgAAQABAAMAAAAJAAYAAQABAAEAAAAJAAcAAQABAAIAAAAJAAgAAQABAAMAAAAKAAYAAQABAAEAAAAKAAcAAQABAAIAAAAKAAgAAQABAAMAAAALAAYAAQABAAEAAAALAAcAAQABAAIAAAALAAgAAQABAAMAAAAMAAYAAQABAAEAAAAMAAcAAQABAAIAAAAMAAgAAQABAAMAAAANAAYAAQABAAEAAAANAAcAAQABAAIAAAANAAgAAQABAAMAAAAOAAYAAQABAAEAAAAOAAcAAQABAAIAAAAOAAgAAQABAAMAAAAPAAYAAQABAAEAAAAPAAcAAQABAAIAAAAPAAgAAQABAAMAAAAQAAYAAQABAAEAAAAQAAcAAQABAAIAAAAQAAgAAQABAAMAAAARAAYAAQABAAEAAAARAAcAAQABAAIAAAARAAgAAQABAAMAAAASAAYAAQABAAEAAAASAAcAAQABAAIAAAASAAgAAQABAAMAAAATAAYAAQABAAEAAAATAAcAAQABAAIAAAATAAgAAQABAAMAAAAUAAYAAQABAAEAAAAUAAcAAQABAAIAAAAUAAgAAQABAAMAAAAVAAYAAQABAAEAAAAVAAcAAQABAAIAAAAVAAgAAQABAAMAAAAWAAYAAQABAAEAAAAWAAcAAQABAAIAAAAWAAgAAQABAAMAAAAXAAYAAQABAAEAAAAXAAcAAQABAAIAAAAYAAYAAQABAAEAAAAYAAcAAQABAAIAAAAYAAgAAQABAAMAAAAZAAYAAQABAAEAAAAZAAcAAQABAAIAAAAZAAgAAQABAAMAAAAaAAYAAQABAAEAAAAaAAcAAQABAAIAAAAaAAgAAQABAAMAAAAbAAYAAQABAAEAAAAbAAcAAQABAAIAAAAbAAgAAQABAAMAAAAcAAYAAQABAAEAAAAcAAcAAQABAAIAAAAcAAgAAQABAAMAAAAcAAkAAQABAAEAAAAcAAoAAQABAAIAAAAcAAsAAQABAAMAAAAcAAwAAQABAAEAAAAcAA0AAQABAAIAAAAcAA4AAQABAAMAAAAbAAwAAQABAAEAAAAbAA0AAQABAAIAAAAbAA4AAQABAAMAAAAaAAwAAQABAAEAAAAaAA0AAQABAAIAAAAaAA4AAQABAAMAAAAZAAwAAQABAAEAAAAZAA0AAQABAAIAAAAZAA4AAQABAAMAAAAYAAwAAQABAAEAAAAYAA0AAQABAAIAAAAYAA4AAQABAAMAAAAXAAwAAQABAAEAAAAXAA0AAQABAAIAAAAXAA4AAQABAAMAAAAWAAwAAQABAAEAAAAWAA0AAQABAAIAAAAWAA4AAQABAAMAAAAVAAwAAQABAAEAAAAVAA0AAQABAAIAAAAVAA4AAQABAAMAAAAUAAwAAQABAAEAAAAUAA0AAQABAAIAAAAUAA4AAQABAAMAAAATAAwAAQABAAEAAAATAA0AAQABAAIAAAATAA4AAQABAAMAAAASAAwAAQABAAEAAAASAA0AAQABAAIAAAASAA4AAQABAAMAAAARAAwAAQABAAEAAAARAA0AAQABAAIAAAARAA4AAQABAAMAAAAQAAwAAQABAAEAAAAQAA0AAQABAAIAAAAQAA4AAQABAAMAAAAPAAwAAQABAAEAAAAPAA0AAQABAAIAAAAPAA4AAQABAAMAAAAOAAwAAQABAAEAAAAOAA0AAQABAAIAAAAOAA4AAQABAAMAAAANAAwAAQABAAEAAAANAA0AAQABAAIAAAANAA4AAQABAAMAAAAMAAwAAQABAAEAAAAMAA0AAQABAAIAAAAMAA4AAQABAAMAAAALAAwAAQABAAEAAAALAA0AAQABAAIAAAALAA4AAQABAAMAAAAKAAwAAQABAAEAAAAKAA0AAQABAAIAAAAKAA4AAQABAAMAAAAJAAwAAQABAAEAAAAJAA0AAQABAAIAAAAJAA4AAQABAAMAAAAIAAwAAQABAAEAAAAIAA0AAQABAAIAAAAIAA4AAQABAAMAAAAHAAwAAQABAAEAAAAHAA0AAQABAAIAAAAHAA4AAQABAAMAAAAGAAwAAQABAAMAAAAGAA0AAQABAAIAAAAGAA4AAQABAAMAAAAFAAwAAQABAAEAAAAFAA0AAQABAAIAAAAFAA4AAQABAAMAAAAEAAwAAQABAAEAAAAEAA0AAQABAAIAAAAEAA4AAQABAAMAAAAEAAkAAQABAAEAAAAEAAoAAQABAAIAAAAEAAsAAQABAAMAAAANAAkAAQABAAEAAAANAAoAAQABAAIAAAANAAsAAQABAAMAAAAOAAkAAQABAAEAAAAOAAoAAQABAAIAAAAOAAsAAQABAAMAAAAPAAkAAQABAAEAAAAPAAoAAQABAAIAAAAPAAsAAQABAAMAAAAQAAkAAQABAAEAAAAQAAoAAQABAAIAAAAQAAsAAQABAAMAAAARAAkAAQABAAEAAAARAAoAAQABAAIAAAARAAsAAQABAAMAAAASAAkAAQABAAEAAAASAAoAAQABAAIAAAASAAsAAQABAAMAAAATAAkAAQABAAEAAAATAAoAAQABAAIAAAATAAsAAQABAAMAAAAUAAkAAQABAAEAAAAUAAoAAQABAAIAAAAUAAsAAQABAAMAAAAVAAkAAQABAAEAAAAVAAoAAQABAAIAAAAVAAsAAQABAAMAAAAWAAkAAQABAAEAAAAWAAoAAQABAAIAAAAWAAsAAQABAAMAAAAXAAkAAQABAAEAAAAXAAoAAQABAAIAAAAXAAsAAQABAAMAAAAYAAkAAQABAAEAAAAYAAoAAQABAAIAAAAYAAsAAQABAAMAAAAZAAkAAQABAAEAAAAZAAoAAQABAAIAAAAZAAsAAQABAAMAAAAaAAkAAQABAAEAAAAaAAoAAQABAAIAAAAaAAsAAQABAAMAAAAbAAkAAQABAAEAAAAbAAoAAQABAAIAAAAbAAsAAQABAAMAAAALAAkAAQABAAEAAAALAAoAAQABAAIAAAALAAsAAQABAAMAAAAMAAkAAQABAAEAAAAMAAoAAQABAAIAAAAMAAsAAQABAAMAAAAKAAkAAQABAAEAAAAKAAoAAQABAAIAAAAKAAsAAQABAAMAAAAJAAkAAQABAAEAAAAJAAoAAQABAAIAAAAJAAsAAQABAAMAAAAIAAkAAQABAAEAAAAIAAoAAQABAAIAAAAIAAsAAQABAAMAAAAHAAkAAQABAAEAAAAHAAoAAQABAAIAAAAHAAsAAQABAAMAAAAGAAoAAQABAAEAAAAGAAsAAQABAAIAAAAFAAkAAQABAAEAAAAFAAoAAQABAAIAAAAFAAsAAQABAAMAAAAXAAgAAQABAAMAAAACAAMAAAAAAAIAAAACAAQAAAAAAAIAAAACAAUAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAAAAAIAAAACAAoAAAAAAAIAAAACAAsAAAAAAAIAAAACAAwAAAAAAAIAAAACAA0AAAAAAAIAAAACAA4AAAAAAAIAAAACAA8AAAAAAAIAAAACABAAAAAAAAIAAAACABEAAAAAAAIAAAAEABIAAAABAAQAAAAFABIAAAABAAQAAAAGABIAAAABAAQAAAAHABIAAAABAAQAAAAIABIAAAABAAQAAAAJABIAAAABAAQAAAAKABIAAAABAAQAAAALABIAAAABAAQAAAAMABIAAAABAAQAAAANABIAAAABAAQAAAAOABIAAAABAAQAAAAPABIAAAABAAQAAAAQABIAAAABAAQAAAARABIAAAABAAQAAAASABIAAAABAAQAAAATABIAAAABAAQAAAAUABIAAAABAAQAAAAVABIAAAABAAQAAAAWABIAAAABAAQAAAAXABIAAAABAAQAAAAYABIAAAABAAQAAAAZABIAAAABAAQAAAAaABIAAAABAAQAAAAbABIAAAABAAQAAAAcABIAAAABAAQAAAAeABEAAAACAAMAAAAeABAAAAACAAIAAAAeAA8AAAACAAIAAAAeAA4AAAACAAIAAAAeAA0AAAACAAIAAAAeAAwAAAACAAIAAAAeAAsAAAACAAIAAAAeAAoAAAACAAIAAAAeAAkAAAACAAIAAAAeAAgAAAACAAIAAAAeAAcAAAACAAIAAAAeAAYAAAACAAIAAAAeAAUAAAACAAIAAAAeAAQAAAACAAIAAAAeAAMAAAACAAEAAAAcAAIAAAABAAAAAAAbAAIAAAABAAAAAAAaAAIAAAABAAAAAAAZAAIAAAABAAAAAAAYAAIAAAABAAAAAAAXAAIAAAABAAAAAAAWAAIAAAABAAAAAAAVAAIAAAABAAAAAAAUAAIAAAABAAAAAAATAAIAAAABAAAAAAASAAIAAAABAAAAAAARAAIAAAABAAAAAAAQAAIAAAABAAAAAAAPAAIAAAABAAAAAAAOAAIAAAABAAAAAAANAAIAAAABAAAAAAAMAAIAAAABAAAAAAALAAIAAAABAAAAAAAKAAIAAAABAAAAAAAJAAIAAAABAAAAAAAIAAIAAAABAAAAAAAHAAIAAAABAAAAAAAGAAIAAAABAAAAAAAFAAIAAAABAAAAAAAEAAIAAAABAAAAAAADAAIAAAABAAAAAAACAAIAAAAAAAAAAAAeAAIAAAACAAAAAAAdAAIAAAABAAAAAAACABIAAAAAAAQAAAADABIAAAABAAQAAAAdABIAAAABAAQAAAAeABIAAAACAAQAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAGAAgAAQABAAIAAAAGAAkAAQABAAMAAAA=")
tile_set = SubResource("TileSet_o4j85")
rendering_quadrant_size = 32

[node name="Layer2" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAPAAUAAQAFAAAAAAAQAAUAAQAFAAAAAAARAAUAAQAFAAAAAAASAAUAAQAFAAAAAAAOAAUAAQAFAAAAAAANAAUAAQAFAAAAAAATAAUAAQAFAAAAAAAMAAUAAQAFAAAAAAALAAUAAQAEAAAAAAAUAAUAAQAFAAAAAAAVAAUAAQAGAAAAAAAWAAQAAQAHAAEAAAAKAAQAAQAHAAEAAAAWAAMAAQAHAAAAAAAKAAMAAQAHAAAAAAAGAAcAAQAAAAIAAAAGAAgAAQAAAAIAAAAGAAkAAQAAAAIAAAAGAAoAAQAAAAIAAAAGAAsAAQAAAAIAAAAGAAwAAQAAAAIAAAAGAA0AAQAAAAIAAAAGAAYAAQAAAAEAAAAGAA4AAQAAAAMAAAAIAAwAAQADAAAAAAAIAAgAAQADAAAAAAAPAAsAAQABAAAAAAAQAAsAAQABAAAAAAARAAsAAQABAAAAAAASAAsAAQABAAAAAAATAAsAAQABAAAAAAAUAAsAAQACAAAAAAAOAAsAAQAAAAAAAAATAAcAAQADAAAAAAAcAAQAAQADAAAAAAAaABAAAQABAAAAAAAZABAAAQABAAAAAAAYABAAAQABAAAAAAAXABAAAQABAAAAAAAVABAAAQABAAAAAAAWABAAAQABAAAAAAAUABAAAQAAAAAAAAAbABAAAQACAAAAAAAdABEAAQADAAAAAAAOAA8AAQADAAAAAAAaAAsAAQAAAAEAAAAaAAwAAQAAAAIAAAAaAA0AAQAAAAMAAAAZAAYAAQABAAAAAAAaAAYAAQABAAAAAAAbAAYAAQABAAAAAAAcAAYAAQACAAAAAAAYAAYAAQAAAAAAAAAKAA8AAQAAAAEAAAAKABAAAQAAAAMAAAAEAAQAAQADAAAAAAA=")
tile_set = SubResource("TileSet_o4j85")

[node name="Layer3" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAYAAoAAAAIAAIAAAAcAAoAAAAIAAIAAAAgAAoAAAAIAAIAAAAkAAoAAAAIAAIAAAAoAAoAAAAIAAIAAAA=")
tile_set = SubResource("TileSet_w03w6")

[node name="Player" parent="." instance=ExtResource("1_r14bm")]
position = Vector2(557, 325)

[node name="GuardsAndCameras" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Guard1" parent="GuardsAndCameras" instance=ExtResource("6_my56m")]
position = Vector2(899, 250)

[node name="PointA" parent="GuardsAndCameras/Guard1/Destinations" index="0"]
position = Vector2(898, 253)

[node name="PointB" parent="GuardsAndCameras/Guard1/Destinations" index="1"]
position = Vector2(897, 458)

[node name="Guard2" parent="GuardsAndCameras" instance=ExtResource("6_my56m")]
position = Vector2(250, 322)

[node name="PointA" parent="GuardsAndCameras/Guard2/Destinations" index="0"]
position = Vector2(250, 322)

[node name="PointB" parent="GuardsAndCameras/Guard2/Destinations" index="1"]
position = Vector2(572, 317)

[node name="Guard3" parent="GuardsAndCameras" instance=ExtResource("6_my56m")]
position = Vector2(800, 407)

[node name="PointA" parent="GuardsAndCameras/Guard3/Destinations" index="0"]
position = Vector2(796, 406)

[node name="PointB" parent="GuardsAndCameras/Guard3/Destinations" index="1"]
position = Vector2(415, 448)

[node name="Guard4" parent="GuardsAndCameras" instance=ExtResource("6_my56m")]
position = Vector2(171, 202)

[node name="PointA" parent="GuardsAndCameras/Guard4/Destinations" index="0"]
position = Vector2(171, 203)

[node name="PointB" parent="GuardsAndCameras/Guard4/Destinations" index="1"]
position = Vector2(171, 474)

[node name="Guard5" parent="GuardsAndCameras" instance=ExtResource("6_my56m")]
position = Vector2(583, 223)

[node name="PointA" parent="GuardsAndCameras/Guard5/Destinations" index="0"]
position = Vector2(584, 224)

[node name="PointB" parent="GuardsAndCameras/Guard5/Destinations" index="1"]
position = Vector2(314, 223)

[node name="Camera1" parent="GuardsAndCameras" instance=ExtResource("7_lipyv")]
position = Vector2(912, 92)

[node name="Camera3" parent="GuardsAndCameras" instance=ExtResource("7_lipyv")]
position = Vector2(336, 573)
rotation = 3.14159

[node name="Camera4" parent="GuardsAndCameras" instance=ExtResource("7_lipyv")]
position = Vector2(705, 572)
rotation = 3.14159

[node name="Camera5" parent="GuardsAndCameras" instance=ExtResource("7_lipyv")]
position = Vector2(838, 572)
rotation = 3.14159

[node name="Camera2" parent="GuardsAndCameras" instance=ExtResource("6_e0757")]
position = Vector2(101, 102)
rotation = 3.14159

[node name="Camera6" parent="GuardsAndCameras" instance=ExtResource("6_e0757")]
position = Vector2(693, 89)
rotation = 3.14159

[node name="Camera7" parent="GuardsAndCameras" instance=ExtResource("6_e0757")]
position = Vector2(289, 95)
rotation = 3.14159

[node name="Shopkeeper" parent="GuardsAndCameras" instance=ExtResource("7_mng4l")]
position = Vector2(529, 142)

[node name="Hats" type="Node2D" parent="."]

[node name="HatsSpawnPositions" type="Node2D" parent="."]

[node name="HatSpawnPosition" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(271, 272)

[node name="HatSpawnPosition2" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(624, 241)

[node name="HatSpawnPosition3" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(272, 400)

[node name="HatSpawnPosition4" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(464, 496)

[node name="HatSpawnPosition5" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(912, 144)

[node name="HatSpawnPosition6" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(944, 561)

[node name="HatSpawnPosition7" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(144, 145)

[node name="HatSpawnPosition8" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(336, 142)

[node name="HatSpawnPosition9" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(619, 178)

[node name="HatSpawnPosition10" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(495, 368)

[node name="HatSpawnPosition11" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(209, 457)

[node name="HatSpawnPosition12" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(208, 312)

[node name="HatSpawnPosition13" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(336, 529)

[node name="HatSpawnPosition14" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(705, 528)

[node name="HatSpawnPosition15" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(838, 529)

[node name="HatSpawnPosition16" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(849, 402)

[node name="HatSpawnPosition17" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(817, 206)

[node name="HatSpawnPosition18" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(720, 114)

[node name="HatSpawnPosition19" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(425, 177)

[node name="HatSpawnPosition20" type="Marker2D" parent="HatsSpawnPositions"]
position = Vector2(653, 368)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4r2yo")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -1049.0
offset_right = -135.0
offset_bottom = -1004.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "aaa"
label_settings = SubResource("LabelSettings_oxe2j")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_7o8t1")
expand_mode = 2

[connection signal="child_entered_tree" from="Hats" to="." method="_on_hats_child_entered_tree"]

[editable path="GuardsAndCameras/Guard1"]
[editable path="GuardsAndCameras/Guard2"]
[editable path="GuardsAndCameras/Guard3"]
[editable path="GuardsAndCameras/Guard4"]
[editable path="GuardsAndCameras/Guard5"]
